Add static files and bootstrap

--- a/homepage/templates/homepage/blank.html
+++ b/homepage/templates/homepage/blank.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>watchlist</title>
+    <title>Blank Page - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body>
+<body id="page-top">
     <div class="text-dark" id="wrapper">
         <nav class="navbar navbar-dark bg-primary align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0" style="background: linear-gradient(180deg, var(--bs-primary) 0%, #005200 100%), var(--bs-primary);border-color: var(--bs-primary);">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="blank.html" style="width: 100%;padding-right: 0px;padding-left: 0px;">
@@ -28,15 +28,15 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="table.html"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="blank.html"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
         </nav>
         <div class="text-dark d-flex flex-column" id="content-wrapper" style="background: rgb(58,59,69);">
-            <div class="text-dark d-flex flex-column" id="content">
+            <div class="text-dark" id="content">
                 <nav class="navbar navbar-light navbar-expand shadow topbar static-top" style="background: var(--bs-gray-900);margin-bottom: 0px;border-bottom: 1px solid var(--bs-gray-800);padding-bottom: 8px;">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
@@ -131,39 +131,71 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="container d-flex flex-column flex-grow-1" style="background: var(--bs-gray-900);min-width: auto;">
-                    <div class="row d-flex flex-column flex-grow-1" style="margin-right: 0px;margin-left: 0px;">
-                        <div class="col-md-9 col-lg-12 col-xl-10 d-flex flex-grow-1 align-items-center" style="padding-right: 0px;padding-left: 0px;min-width: 100%;">
-                            <div class="card shadow-lg flex-grow-1 o-hidden border-0" style="min-height: 80vh;background: #231f20;">
-                                <div class="card-body flex-grow-1 p-0" style="height: 80vh;">
-                                    <div class="row" style="margin-right: 0px;margin-left: 0px;height: 80vh;">
-                                        <div class="col-lg-6 d-flex d-lg-flex flex-grow-1" style="padding-right: 0px;padding-left: 0px;">
-                                            <div class="flex-grow-1 bg-login-image" style="background: url(&quot;assets/img/jakub-sisulak-L1AEdl-iLL4-unsplash.jpg&quot;) top / cover;"></div>
+                <div class="text-dark bg-dark text-secondary px-4 py-5 text-center mb-5" style="background: rgb(58, 59, 69);margin-bottom: 0px;">
+                    <h1 class="display-5 fw-bold text-white" style="font-family: 'Source Sans Pro', sans-serif;font-weight: bold;">watchlist.games<br></h1>
+                    <p class="fs-5 mb-5" style="color: var(--bs-white);">Finding you the best digital video game prices.<br></p>
+                    <div style="padding-top: 0px;padding-bottom: 8px;">
+                        <section class="features-boxed" style="background: var(--bs-gray-900);">
+                            <div class="container" style="background: #3a3b45;">
+                                <h1 style="color: var(--bs-white);">About The Developers</h1>
+                                <p class="fs-5 mb-5" style="color: var(--bs-white);">We're a duo of passionate and fun software and web developers who launched a video game pricing watchlist to ensure you get the best prices from our evolving database from common online shops where most people purchase digital games.</p>
+                                <div class="intro"></div>
+                                <h1 style="color: var(--bs-white);">Video Game Platforms We Track/Plan To Track</h1>
+                                <div class="row justify-content-center features mb-5" style="padding: 4px 0px;">
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/steam.svg">
+                                            <h3 class="name">Steam</h3>
+                                            <p class="description">Just Released! Check out the database now for the latest deals from Steam!</p><a class="learn-more" href="#">Learn more »</a>
                                         </div>
-                                        <div class="col-lg-6 d-flex flex-column justify-content-center">
-                                            <div class="p-5">
-                                                <div class="text-center">
-                                                    <h4 class="text-light mb-4">Welcome Back!</h4>
-                                                </div>
-                                                <form class="user">
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail-1" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3">
-                                                        <div class="custom-control custom-checkbox small">
-                                                            <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label text-light custom-control-label" for="formCheck-1">Remember Me</label></div>
-                                                        </div>
-                                                    </div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="background: var(--bs-primary);">Login</button>
-                                                    <hr>
-                                                </form>
-                                                <div class="text-center"><a class="small" href="forgot-password.html" style="color: var(--bs-primary);">Forgot Password?</a></div>
-                                                <div class="text-center"><a class="small" href="register.html" style="color: var(--bs-primary);">Create an Account!</a></div>
-                                            </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/switch.svg">
+                                            <h3 class="name">Nintendo eShop</h3>
+                                            <p class="description">Watchlist in progress! <br>See updates on the news tab to keep up to date with us!</p><a class="learn-more" href="#">Learn more »</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/playstation.svg">
+                                            <h3 class="name">PlayStation Store</h3>
+                                            <p class="description">Watchlist in progress!&nbsp;<br>See updates on the news tab to keep up to date with us!<br></p><a class="learn-more" href="#">Learn more »</a>
+                                        </div>
+                                    </div>
+                                    <div class="w-100"></div>
+                                </div>
+                            </div>
+                        </section>
+                        <h1 style="color: var(--bs-white);">Watchlist News</h1>
+                        <section class="features-boxed" style="background: var(--bs-gray-900);">
+                            <div class="container" style="background: #3a3b45;">
+                                <div class="intro"></div>
+                                <div class="row justify-content-center features mb-5" style="background: #3a3b45;padding-top: 4px;padding-bottom: 4px;">
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><i class="fa fa-map-marker icon"></i>
+                                            <h3 class="name">Upcoming Platforms</h3>
+                                            <p class="description">We are planning on rolling out the website databases for the Nintendo eShop and PlayStation Store by the end of the year. Stay tuned!</p><a class="learn-more" href="#">Learn more »</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><i class="fa fa-clock-o icon"></i>
+                                            <h3 class="name">Website Updates</h3>
+                                            <p class="description">The watchlist will be updated once a week as the new pricing and deals come out. Make sure to visit on Sundays to view the deals!</p><a class="learn-more" href="#">Learn more »</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
+                                        <div class="box" style="margin-bottom: 0px;"><i class="fa fa-list-alt icon"></i>
+                                            <h3 class="name">Ratings</h3>
+                                            <p class="description">Games will be able to be rated when implemented in the upcoming year. Stay tuned!<br></p><a class="learn-more" href="#">Learn more »</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </section>
+                        <h1 style="color: var(--bs-white);">Contact Us</h1><button class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" type="button">Watchlist.games@gmail.com</button>
                     </div>
+                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"></div>
+                </div>
+                <div class="container-fluid">
+                    <h3 class="text-dark mb-1"></h3>
                 </div>
                 <div class="footer-2"></div>
             </div>
