--- a/homepage/templates/homepage/forgot-password.html
+++ b/homepage/templates/homepage/forgot-password.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="table.html"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
                 </ul>
@@ -132,31 +132,27 @@
                     </div>
                 </nav>
                 <div class="container d-flex flex-column flex-grow-1" style="background: var(--bs-gray-900);min-width: auto;">
-                    <div class="row d-flex flex-column flex-grow-1" style="margin-right: 0px;margin-left: 0px;">
-                        <div class="col-md-9 col-lg-12 col-xl-10 d-flex flex-grow-1 align-items-center" style="padding-right: 0px;padding-left: 0px;min-width: 100%;">
-                            <div class="card shadow-lg flex-grow-1 o-hidden border-0" style="min-height: 80vh;background: #231f20;">
-                                <div class="card-body flex-grow-1 p-0" style="height: 80vh;">
-                                    <div class="row" style="margin-right: 0px;margin-left: 0px;height: 80vh;">
-                                        <div class="col-lg-6 d-flex d-lg-flex flex-grow-1" style="padding-right: 0px;padding-left: 0px;">
-                                            <div class="flex-grow-1 bg-login-image" style="background: url(&quot;assets/img/jakub-sisulak-L1AEdl-iLL4-unsplash.jpg&quot;) top / cover;"></div>
+                    <div class="row flex-grow-1 justify-content-center align-items-center" style="margin-right: 0px;margin-left: 0px;">
+                        <div class="col-md-9 col-lg-12 col-xl-10" style="padding-right: 0px;padding-left: 0px;min-width: 100%;">
+                            <div class="card shadow-lg flex-grow-1 o-hidden border-0" style="background: #231f20;margin-top: 0px;margin-bottom: 0px;">
+                                <div class="card-body p-0" style="min-height: 80vh;">
+                                    <div class="row" style="margin-right: 0px;margin-left: 0px;">
+                                        <div class="col-lg-6 d-none d-lg-flex" style="background: url(&quot;assets/img/jakub-sisulak-sKJPFpnHA2A-unsplash.jpg&quot;) left / cover;min-height: 80vh;">
+                                            <div></div>
                                         </div>
-                                        <div class="col-lg-6 d-flex flex-column justify-content-center">
-                                            <div class="p-5">
+                                        <div class="col-lg-6 d-flex flex-column align-items-center">
+                                            <div class="d-flex flex-column flex-grow-1 justify-content-center align-content-center p-5">
                                                 <div class="text-center">
-                                                    <h4 class="text-light mb-4">Welcome Back!</h4>
+                                                    <h4 class="text-light mb-2">Forgot Your Password?</h4>
+                                                    <p class="text-light mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
                                                 </div>
                                                 <form class="user">
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail-1" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3">
-                                                        <div class="custom-control custom-checkbox small">
-                                                            <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label text-light custom-control-label" for="formCheck-1">Remember Me</label></div>
-                                                        </div>
-                                                    </div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="background: var(--bs-primary);">Login</button>
-                                                    <hr>
+                                                    <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" minlength="8" required="" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="background: var(--bs-primary);">Reset Password</button>
                                                 </form>
-                                                <div class="text-center"><a class="small" href="forgot-password.html" style="color: var(--bs-primary);">Forgot Password?</a></div>
-                                                <div class="text-center"><a class="small" href="register.html" style="color: var(--bs-primary);">Create an Account!</a></div>
+                                                <div class="text-center">
+                                                    <hr><a class="small" href="register.html" style="color: var(--bs-primary);">Create an Account!</a>
+                                                </div>
+                                                <div class="text-center"><a class="small" href="login.html" style="color: var(--bs-primary);">Already have an account? Login!</a></div>
                                             </div>
                                         </div>
                                     </div>
