--- a/homepage/templates/homepage/table.html
+++ b/homepage/templates/homepage/table.html
@@ -27,8 +27,8 @@
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="table.html"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
                 </ul>
@@ -131,35 +131,146 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="container d-flex flex-column flex-grow-1" style="background: var(--bs-gray-900);min-width: auto;">
-                    <div class="row d-flex flex-column flex-grow-1" style="margin-right: 0px;margin-left: 0px;">
-                        <div class="col-md-9 col-lg-12 col-xl-10 d-flex flex-grow-1 align-items-center" style="padding-right: 0px;padding-left: 0px;min-width: 100%;">
-                            <div class="card shadow-lg flex-grow-1 o-hidden border-0" style="min-height: 80vh;background: #231f20;">
-                                <div class="card-body flex-grow-1 p-0" style="height: 80vh;">
-                                    <div class="row" style="margin-right: 0px;margin-left: 0px;height: 80vh;">
-                                        <div class="col-lg-6 d-flex d-lg-flex flex-grow-1" style="padding-right: 0px;padding-left: 0px;">
-                                            <div class="flex-grow-1 bg-login-image" style="background: url(&quot;assets/img/jakub-sisulak-L1AEdl-iLL4-unsplash.jpg&quot;) top / cover;"></div>
-                                        </div>
-                                        <div class="col-lg-6 d-flex flex-column justify-content-center">
-                                            <div class="p-5">
-                                                <div class="text-center">
-                                                    <h4 class="text-light mb-4">Welcome Back!</h4>
-                                                </div>
-                                                <form class="user">
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail-1" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="background: var(--bs-gray-900);border-color: var(--bs-gray-800);"></div>
-                                                    <div class="mb-3">
-                                                        <div class="custom-control custom-checkbox small">
-                                                            <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label text-light custom-control-label" for="formCheck-1">Remember Me</label></div>
-                                                        </div>
-                                                    </div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="background: var(--bs-primary);">Login</button>
-                                                    <hr>
-                                                </form>
-                                                <div class="text-center"><a class="small" href="forgot-password.html" style="color: var(--bs-primary);">Forgot Password?</a></div>
-                                                <div class="text-center"><a class="small" href="register.html" style="color: var(--bs-primary);">Create an Account!</a></div>
-                                            </div>
-                                        </div>
-                                    </div>
+                <div class="container-fluid text-center d-flex flex-column flex-grow-1 my-4" style="background: rgb(58,59,69);">
+                    <h1 class="text-secondary mb-4" style="color: rgb(255,255,255);font-weight: bold;">Steam Games Watchlist&nbsp;</h1>
+                    <div class="card shadow" style="background: #231f20;">
+                        <div class="card-header py-3" style="background: #231f20;">
+                            <p class="text-secondary m-0 fw-bold">Employee Info</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6 text-nowrap">
+                                    <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label" style="color: var(--bs-gray-700);">Show&nbsp;<select class="d-inline-block form-select form-select-sm" style="background: #292c2f;">
+                                                <option value="10" selected="">10</option>
+                                                <option value="25">25</option>
+                                                <option value="50">50</option>
+                                                <option value="100">100</option>
+                                            </select>&nbsp;</label></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="text-md-end dataTables_filter" id="dataTable_filter"><label class="form-label"><input class="bg-dark form-control form-control-sm" type="search" aria-controls="dataTable" placeholder="Search"></label></div>
+                                </div>
+                            </div>
+                            <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                                <table class="table my-0" id="dataTable">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-secondary">Name</th>
+                                            <th class="text-secondary">Position</th>
+                                            <th class="text-secondary">Office</th>
+                                            <th class="text-secondary">Age</th>
+                                            <th class="text-secondary">Start date</th>
+                                            <th class="text-secondary">Salary</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Airi Satou</td>
+                                            <td>Accountant</td>
+                                            <td>Tokyo</td>
+                                            <td>33</td>
+                                            <td>2008/11/28</td>
+                                            <td>$162,700</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Angelica Ramos</td>
+                                            <td>Chief Executive Officer(CEO)</td>
+                                            <td>London</td>
+                                            <td>47</td>
+                                            <td>2009/10/09<br></td>
+                                            <td>$1,200,000</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Ashton Cox</td>
+                                            <td>Junior Technical Author</td>
+                                            <td>San Francisco</td>
+                                            <td>66</td>
+                                            <td>2009/01/12<br></td>
+                                            <td>$86,000</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">Bradley Greer</td>
+                                            <td>Software Engineer</td>
+                                            <td>London</td>
+                                            <td>41</td>
+                                            <td>2012/10/13<br></td>
+                                            <td>$132,000</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar5.jpeg">Brenden Wagner</td>
+                                            <td>Software Engineer</td>
+                                            <td>San Francisco</td>
+                                            <td>28</td>
+                                            <td>2011/06/07<br></td>
+                                            <td>$206,850</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Brielle Williamson</td>
+                                            <td>Integration Specialist</td>
+                                            <td>New York</td>
+                                            <td>61</td>
+                                            <td>2012/12/02<br></td>
+                                            <td>$372,000</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Bruno Nash<br></td>
+                                            <td>Software Engineer</td>
+                                            <td>London</td>
+                                            <td>38</td>
+                                            <td>2011/05/03<br></td>
+                                            <td>$163,500</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Caesar Vance</td>
+                                            <td>Pre-Sales Support</td>
+                                            <td>New York</td>
+                                            <td>21</td>
+                                            <td>2011/12/12<br></td>
+                                            <td>$106,450</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">Cara Stevens</td>
+                                            <td>Sales Assistant</td>
+                                            <td>New York</td>
+                                            <td>46</td>
+                                            <td>2011/12/06<br></td>
+                                            <td>$145,600</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar5.jpeg">Cedric Kelly</td>
+                                            <td>Senior JavaScript Developer</td>
+                                            <td>Edinburgh</td>
+                                            <td>22</td>
+                                            <td>2012/03/29<br></td>
+                                            <td>$433,060</td>
+                                        </tr>
+                                    </tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <td><strong>Name</strong></td>
+                                            <td><strong>Position</strong></td>
+                                            <td><strong>Office</strong></td>
+                                            <td><strong>Age</strong></td>
+                                            <td><strong>Start date</strong></td>
+                                            <td><strong>Salary</strong></td>
+                                        </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 align-self-center">
+                                    <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 27</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
+                                        <ul class="pagination">
+                                            <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+                                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                            <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+                                        </ul>
+                                    </nav>
                                 </div>
                             </div>
                         </div>
