--- a/homepage/templates/homepage/blank.html
+++ b/homepage/templates/homepage/blank.html
@@ -1,28 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blank Page - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <title>Watchlist.games - Home</title>
+    <link rel="stylesheet" href="{% static 'homepage/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
-    <link rel="stylesheet" href="assets/css/simple-footer.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="{% static 'homepage/fonts/fontawesome-all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/fonts/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/fonts/fontawesome5-overrides.min.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/css/Features-Boxed.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/css/Pretty-Footer.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/css/simple-footer.css' %}">
+    <link rel="stylesheet" href="{% static 'homepage/css/colors.css' %}">
 </head>
 
 <body id="page-top">
     <div class="text-dark" id="wrapper">
         <nav class="navbar navbar-dark bg-primary align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0" style="background: linear-gradient(180deg, var(--bs-primary) 0%, #005200 100%), var(--bs-primary);border-color: var(--bs-primary);">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="blank.html" style="width: 100%;padding-right: 0px;padding-left: 0px;">
-                    <div class="sidebar-brand-icon rotate-n-15"></div><img style="max-width: 100%;padding-right: 16px;padding-left: 16px;" src="assets/img/watchlist_white_long.png">
+                    <div class="sidebar-brand-icon rotate-n-15"></div><img style="max-width: 100%;padding-right: 16px;padding-left: 16px;" src="{% static 'homepage/img/watchlist_white_long.png' %}">
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
@@ -84,7 +85,7 @@
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="badge bg-primary badge-counter" style="background: var(--bs-purple);">3+</span><i class="fas fa-bell fa-fw"></i></a>
                                     <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
                                         <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar4.jpeg">
+                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="{% static 'homepage/img/avatars/avatar4.jpeg' %}">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="fw-bold">
@@ -92,7 +93,7 @@
                                                 <p class="small text-gray-500 mb-0">Emily Fowler - 58m</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar2.jpeg">
+                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="{% static 'homepage/img/avatars/avatar2.jpeg' %}">
                                                 <div class="status-indicator"></div>
                                             </div>
                                             <div class="fw-bold">
@@ -100,7 +101,7 @@
                                                 <p class="small text-gray-500 mb-0">Jae Chun - 1d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar3.jpeg">
+                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="{% static 'homepage/img/avatars/avatar3.jpeg' %}">
                                                 <div class="bg-warning status-indicator"></div>
                                             </div>
                                             <div class="fw-bold">
@@ -108,7 +109,7 @@
                                                 <p class="small text-gray-500 mb-0">Morgan Alvarez - 2d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar5.jpeg">
+                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="{% static 'homepage/img/avatars/avatar5.jpeg' %}">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="fw-bold">
@@ -122,7 +123,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small" style="color: var(--bs-white);">Valerie Luna</span><img class="border rounded-circle img-profile" src="assets/img/avatars/avatar1.jpeg"></a>
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small" style="color: var(--bs-white);">Valerie Luna</span><img class="border rounded-circle img-profile" src="{% static 'homepage/img/avatars/avatar1.jpeg' %}"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -143,19 +144,19 @@
                                 <h1 style="color: var(--bs-white);">Video Game Platforms We Track/Plan To Track</h1>
                                 <div class="row justify-content-center features mb-5" style="padding: 4px 0px;">
                                     <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
-                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/steam.svg">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="{% static 'homepage/img/steam.svg' %}">
                                             <h3 class="name">Steam</h3>
                                             <p class="description">Just Released! Check out the database now for the latest deals from Steam!</p><a class="learn-more" href="#">Learn more »</a>
                                         </div>
                                     </div>
                                     <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
-                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/switch.svg">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="{% static 'homepage/img/switch.svg' %}">
                                             <h3 class="name">Nintendo eShop</h3>
                                             <p class="description">Watchlist in progress! <br>See updates on the news tab to keep up to date with us!</p><a class="learn-more" href="#">Learn more »</a>
                                         </div>
                                     </div>
                                     <div class="col-sm-6 col-md-5 col-lg-4 d-flex item">
-                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="assets/img/playstation.svg">
+                                        <div class="box" style="margin-bottom: 0px;"><img style="margin-bottom: 35px;margin-top: 20px;height: 60px;" src="{% static 'homepage/img/playstation.svg' %}">
                                             <h3 class="name">PlayStation Store</h3>
                                             <p class="description">Watchlist in progress!&nbsp;<br>See updates on the news tab to keep up to date with us!<br></p><a class="learn-more" href="#">Learn more »</a>
                                         </div>
@@ -213,8 +214,8 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="{% static 'homepage/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/theme.js' %}"></script>
 </body>
 
 </html>
