--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -22,16 +22,18 @@
 <body id="page-top">
     <div class="text-dark" id="wrapper">
         <nav class="navbar navbar-dark bg-primary align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0" style="background: linear-gradient(180deg, var(--bs-primary) 0%, #005200 100%), var(--bs-primary);border-color: var(--bs-primary);">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="blank.html" style="width: 100%;padding-right: 0px;padding-left: 0px;">
-                    <div class="sidebar-brand-icon rotate-n-15"></div><img style="max-width: 100%;padding-right: 16px;padding-left: 16px;" src="{% static 'homepage/img/watchlist_white_long.png' %}">
+            <div class="container-fluid d-flex flex-column p-0">
+                <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="{% url 'home' %}" style="width: 100%;padding-right: 0px;padding-left: 0px;">
+                    <div class="sidebar-brand-icon rotate-n-15"></div>
+                    <img style="max-width: 100%;padding-right: 16px;padding-left: 16px;" src="{% static 'homepage/img/watchlist_white_long.png' %}">
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="blank.html"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block nav-profile %}{% endblock %}" href="{% url 'profile' %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block nav-table %}{% endblock %}" href="{% url 'table' %}"><i class="fa fa-steam"></i><span>Steam Deals</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block nav-login %}{% endblock %}" href="{% url 'login' %}"><i class="far fa-user-circle"></i><span>Login</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block nav-register %}{% endblock %}" href="{% url 'register' %}"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
+                    <li class="nav-item"><a class="nav-link {% block nav-about %}{% endblock %}" href="{% url 'home' %}"><i class="fas fa-window-maximize"></i><span>About&nbsp;</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
@@ -152,8 +154,8 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'homepage/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/theme.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="{% static 'homepage/js/theme.js' %}"></script>
 </body>
 
 </html>
